@@ -29,20 +29,17 @@ import java.util.*;
 public class SubSet {
   public ArrayList<ArrayList<Integer>> subsets(int[] S) {
     ArrayList<ArrayList<Integer>> result = new ArrayList<ArrayList<Integer>>();
-    LinkedList<Integer> current = new LinkedList<Integer>();
-    result.add(new ArrayList<Integer>(current));
-    doCombination(S, 0, 0, current, result);
+    subsets(S, 0, new ArrayList<Integer>(), result);
     return result;
   }
 
-  void doCombination(int[] S, int pos, int start, LinkedList<Integer> current,
-                     ArrayList<ArrayList<Integer>> result)
-  {
-    for (int i = start; i < S.length; i++) {
-      current.addLast(S[i]);
-      result.add(new ArrayList(current));
-      doCombination(S, pos + 1, i + 1, current, result);
-      current.removeLast();
+  void subsets(int[] S, int pos, ArrayList<Integer> current, ArrayList<ArrayList<Integer>> result) {
+    result.add(new ArrayList<Integer>(current));
+    if (pos == S.length) return;
+    for (int i = pos; i < S.length; i++) {
+      current.add(S[i]);
+      subsets(S, i + 1, current, result);
+      current.remove(current.size() - 1);
     }
   }
 }
